log
Thu Apr  7 21:10:00 -04 2022: 
 tests:  0|6
total_score: 0/70
c03180f
Thu Apr  7 21:17:57 -04 2022: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:4:
./hashmap.c:57:5: error: variable 'mapa' is uninitialized when used here [-Werror,-Wuninitialized]
    mapa->buckets = NULL;
    ^~~~
./hashmap.c:56:18: note: initialize the variable 'mapa' to silence this warning
    HashMap *mapa;
                 ^
                  = NULL
1 error generated.
Compilation failed
5eed410
Thu Apr  7 21:20:03 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6803bd3
Thu Apr  7 21:21:03 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
8129405
Thu Apr  7 21:23:14 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
667fd44
Thu Apr  7 21:47:44 -04 2022: 
 hashmap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|0
9c5c6fe
Thu Apr  7 21:48:15 -04 2022: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
ac447f9
Thu Apr  7 21:48:55 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1eb2410
Thu Apr  7 21:52:13 -04 2022: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|0
64c271a
Thu Apr  7 21:53:06 -04 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
7f46070
Thu Apr  7 21:55:02 -04 2022: 
 hashmap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
07af0c9
Thu Apr  7 21:56:28 -04 2022: 
 hashmap.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:4:
./hashmap.c:44:10: error: unused variable 'pos' [-Werror,-Wunused-variable]
    long pos = hash(key, map->capacity);
         ^
1 error generated.
Compilation failed
ef1f772
Thu Apr  7 21:57:03 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
98b3d4f
Thu Apr  7 22:03:07 -04 2022: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
0b36544
Thu Apr  7 22:08:41 -04 2022: 
 hashmap.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
43be1ed
Thu Apr  7 22:13:31 -04 2022: 
 hashmap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  0|0
65b6ddd
Thu Apr  7 23:30:23 -04 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
./hashmap.c:44:46: error: void function 'insertMap' should not return a value [-Wreturn-type]
    if (map->buckets == NULL || key == NULL) return NULL;
                                             ^      ~~~~
1 error generated.
Compilation failed
a0fe1f5
Thu Apr  7 23:30:44 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ac06b68
Thu Apr  7 23:35:20 -04 2022: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
750e6eb
Fri Apr  8 11:17:30 -04 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cf6d11d
Fri Apr  8 11:19:20 -04 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
./hashmap.c:45:11: error: unused variable 'newPair' [-Werror,-Wunused-variable]
    Pair *newPair = createPair(key, value);
          ^
1 error generated.
Compilation failed
f20564a
Fri Apr  8 11:19:41 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a174cfe
Fri Apr  8 11:20:22 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
deb8a05
Fri Apr  8 11:24:08 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
19d3c1d
Fri Apr  8 11:24:39 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b4272fd
Fri Apr  8 11:25:01 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0bd5e44
Fri Apr  8 11:26:13 -04 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
e6ca254
Fri Apr  8 11:31:26 -04 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
2c1e48d
Fri Apr  8 11:31:57 -04 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
5c6e5bc
Fri Apr  8 11:32:55 -04 2022: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
95ec3c7
Fri Apr  8 11:33:39 -04 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
8fed90c
Fri Apr  8 11:39:22 -04 2022: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
befd9e3
Fri Apr  8 11:40:06 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b4e44fb
Fri Apr  8 11:42:01 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
98e1404
Fri Apr  8 11:43:22 -04 2022: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
bee09aa
Fri Apr  8 11:45:01 -04 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
57ad7b5
Fri Apr  8 11:46:17 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f3037a1
Fri Apr  8 11:48:19 -04 2022: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
65f0baf
Fri Apr  8 11:51:11 -04 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
e5d3aa4
Fri Apr  8 11:52:24 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
785d911
Fri Apr  8 11:55:08 -04 2022: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 20/70
2817797
Fri Apr  8 11:56:32 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
edb8837
Fri Apr  8 12:03:21 -04 2022: 
 hashmap.c | 11 +++++++----
 1 file changed, 7 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
3167b26
Fri Apr  8 12:07:32 -04 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
5385175
Fri Apr  8 12:08:15 -04 2022: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
16622a4
Fri Apr  8 12:09:56 -04 2022: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
8306729
Fri Apr  8 12:10:22 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 20/70
31ed4db
Fri Apr  8 12:16:38 -04 2022: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|5
total_score: 20/70
b3f8463
Fri Apr  8 12:18:47 -04 2022: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  3|5
total_score: 20/70
c318fba
Fri Apr  8 12:19:59 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
0106853
Fri Apr  8 12:21:00 -04 2022: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
51c70fc
Fri Apr  8 17:50:31 -04 2022: 
 hashmap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  8|3
total_score: 40/70
d9d3735
Fri Apr  8 17:55:13 -04 2022: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 40/70
f238483
Fri Apr  8 17:58:03 -04 2022: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
87d4ef1
Fri Apr  8 18:06:09 -04 2022: 
 hashmap.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 40/70
e3c9d19
Fri Apr  8 18:07:25 -04 2022: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
c4ab777
Fri Apr  8 18:08:38 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1362027
Fri Apr  8 18:13:35 -04 2022: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
./hashmap.c:107:44: error: void function 'eraseMap' should not return a value [-Wreturn-type]
            if (map->buckets[pos] == NULL) return NULL;
                                           ^      ~~~~
1 error generated.
Compilation failed
3455006
Fri Apr  8 18:14:02 -04 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6dc9785
Fri Apr  8 18:14:23 -04 2022: 
 hashmap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 40/70
3479a63
Fri Apr  8 18:15:25 -04 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
c300e0d
Fri Apr  8 18:16:32 -04 2022: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 40/70
5b471a3
